src/app/components/project-card/project-card.component.scss
@use './abstracts' as *;

.project-card {
  display: block;
  margin: 0 auto;
  width: 90%;
  border-radius: var(--br);
  border: 1px solid var(--accent-hl-clr);
  transition: all 0.3s ease;
  background: var(--secondary-clr);
  color: var(--color-text);
  padding: 0;

  &:hover {
    @include hover-effect;
  }

  h3 {
    text-align: center;
  }

  .images {
    display: flex;
    gap: var(--spacer);
  }

  img {
    overflow: hidden;
    width: 100%;
    height: 100%;
    max-width: 100%;
  }

  .content {
    padding: var(--spacer);

    .technologies {
      margin-bottom: var(--spacer-md);

      span {
        background: var(--accent-clr);
        color: var(--color-secondary-text);
        margin-right: var(--spacer);
        padding: var(--spacer-sm);
        border-radius: var(--br);
        font-size: var(--fs-5);
        font-weight: 500;
      }
    }

    .actions {
      a {
        text-align: center;
        padding: var(--spacer-sm);
        border-radius: var(--br);
        text-decoration: none;
        font-weight: 500;
        transition: all 0.3s ease;
        margin-right: var(--spacer);

        &.demo {
          background: var(--accent-clr);
          color: var(--secondary-clr);

          &:hover,
          &.github {
            background: var(--accent-hl-clr);
          }
        }

        &.github {
          background: var(--accent-clr);
          color: var(--secondary-clr);

          &:hover {
            background: var(--accent-hl-clr);
          }
        }
      }
    }
  }

  @media (min-width: 0px) and (max-width: 649px) {

    margin: 0 auto;

    .images {
      flex-direction: column;
    }
  }
}

